--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -319,8 +319,8 @@ body {
   position: absolute;
   top: 20px;
   left: 20px;
-  background: var(--bittersweet);
-  color: var(--white);
+  background-color: #fbdfc7;
+  color: #252525;
   padding: 5px 15px;
   font-family: var(--ff-roboto);
   font-size: var(--fs-7);
@@ -2966,7 +2966,7 @@ a {
 
 /* Container for the sale text */
 .sale-animation-bar {
-  background: #000;
+  background: #fbdfc7;
   /* Background of the bar */
   padding: 10px;
   overflow: hidden;
@@ -3164,8 +3164,8 @@ a {
 /* filter  */
 /* Filter Button */
 .filter-btn {
-  background-color: #000;
-  color: #fff;
+  background-color: #fbdfc7;
+  color: #252525;
   padding: 7px 10px;
   border: none;
   cursor: pointer;
