--- a/manage/css/all.css
+++ b/manage/css/all.css
@@ -1240,3 +1240,9 @@ section {
 .h-inheret {
   height: inherit !important;
 }
+.h-44 {
+  height: 44px !important;
+}
+.hide{
+  display: hidden;
+}
